manifests/grafana.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
